WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
309537
Confusing build error message when using WeakPtr<T>::get() with a T that is not defined
https://bugs.webkit.org/show_bug.cgi?id=309537
Summary
Confusing build error message when using WeakPtr<T>::get() with a T that is n...
Chris Dumez
Reported
2026-03-09 17:40:51 PDT
Confusing build error message when using WeakPtr<T>::get() with a T that is not defined. Instead of complaining that T is not defined, it complains that T needs to be either ref-counted or CanMakeCheckedPtr.
Attachments
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2026-03-09 17:42:20 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/60232
EWS
Comment 2
2026-03-10 01:37:46 PDT
Committed
308966@main
(94bbba49ee07): <
https://commits.webkit.org/308966@main
> Reviewed commits have been landed. Closing PR #60232 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2026-03-10 01:38:12 PDT
<
rdar://problem/172164767
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug